# xingu

./: .gitignore  Dockerfile  Makefile  README.MD  README.md  pyproject.toml
dataproviders/: examples_ames_houses.py  template_dataprovider.py
examples/classifier-titanic/: EDA.ipynb
examples/classifier-titanic/dataproviders/: titanic.py
examples/classifier-titanic/estimators/: xgboost_classifier.py
notebooks/: POC Use Xingu.ipynb  config_my_xingu.example.py  config_my_xingu.example.yaml
src/: __init__.py  __main__.py  coach.py  dataprovider.py  dataproviderfactory.py
src/deploy/: README.md  __main__.py  deploy.py
utils/: train-multibranch.sh
xingu/: __init__.py  __main__.py  coach.py  config_manager.py  dataprovider.py  dataproviderfactory.py  estimator.py  model.py
xingu/estimators/: catboost.py  xgboost_optuna.py
